--- a/app/index.css
+++ b/app/index.css
@@ -1,8 +1,28 @@
-body {
+body {  /* sys fonts */
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  list-style-type: none;      /* removes bulletpoints */
 }
 
 .container {
   max-width: 1200px;
-  margin: 0 auto;        /* centers everything inside of it */
+  margin: 0 auto;             /* centers everything inside of it */
+}
+
+.languages {
+  display: flex;              /* displays row horizontally */
+  justify-content: center;    /* center all items horizontally */
+}
+
+.languages li{
+  margin: 10px;
+  font-weight: bold;
+  color: tomato;
+  cursor: pointer;
 }
