--- a/app/index.css
+++ b/app/index.css
@@ -74,16 +74,14 @@ li {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #02d050;
 }
 
 .title {
-  colot: tomato;
+  color: #0282d0;
 }
 
-
 .home-image {
-  margin-top: 30px;
+  margin-bottom: 12px;
 }
 
 .button {
